fix(user-detail-form): user details form layout breaks on small screens

--- a/src/app/components/modal/user-details-form/user-details-form.component.scss
+++ b/src/app/components/modal/user-details-form/user-details-form.component.scss
@@ -33,6 +33,11 @@
 .form-row {
   display: flex;
   gap: 20px;
+
+  @media (max-width: 540px) {
+    flex-direction: column;
+    gap: 0;
+  }
 }
 
 .agreement-text {
